# hexapod

./: README.md  index.html
hexapod_control/: CMakeLists.txt  package.xml
hexapod_control/config/: tetrapod_controllers.yaml
hexapod_control/launch/: tetrapod_controllers.launch
hexapod_controllers/tetrapod_pose_controller/: CMakeLists.txt  package.xml  tetrapod_pose_controller_plugin.xml
hexapod_controllers/tetrapod_pose_controller/config/: controllers.yaml
hexapod_controllers/tetrapod_pose_controller/src/: tetrapod_pose_controller.cpp
hexapod_description/: CMakeLists.txt  README.md  package.xml
hexapod_description/config/: xacrodisplay.rviz
hexapod_description/launch/: photobooth.launch  upload_gen_tetrapod.launch  view_leg.launch  xacrodisplay.launch
hexapod_description/meshes/: AX12.dae  AX12_collision.dae  F1.dae  F1_collision.dae  F2.dae  F2_collision.dae  F3.dae  F3_collision.dae  F4.dae  F4_collision.dae  F51.dae  F52.dae  F6.dae  F6_collision.dae
hexapod_description/model/: camera.urdf  gen_tetrapod.urdf.xacro  leg.gazebo.xacro  leg.transmission.xacro  leg.urdf.xacro  leg_test.urdf.xacro  tetrapod.urdf.xacro
hexapod_description/scad/: body.cog.scad  body.cog.urdf  body.cog.urdf.xacro  dimensions.yaml  gen_xacrodisplay.launch  generate.py  tetrapod.cog.urdf.xacro  xacrodisplay.rviz
hexapod_description/scripts/: auto_trigger  photoshootout
hexapod_doc/: README.md
hexapod_doc/articles/: body_design.md  leg_kinematics.md  urdf_model.adoc
hexapod_doc/ipython_notebooks/: 2DOF_planar_IK.ipynb  hexapod_leg_IK.ipynb
hexapod_gazebo/: CMakeLists.txt  README.md  package.xml
hexapod_gazebo/launch/: gen_tetrapod_sim.launch  generated_tetrapod.launch  hexapod.launch
hexapod_hw/: CMakeLists.txt  README.md  package.xml
hexapod_hw/config/: controllers.yaml  tetrapod_hw.yaml
hexapod_hw/launch/: controller_manager.launch  start_leg_1_controller.launch  tetrapod_hw.launch
hexapod_kinematics/: CMakeLists.txt  package.xml
hexapod_kinematics/include/hexapod_kinematics/: constants.h  leg_kinematics.h  rr_kinematics.h  util.h
hexapod_kinematics/test/: test_leg_kinematics.cpp  test_rr_kinematics.cpp
hexapod_launch/: CMakeLists.txt  package.xml
hexapod_launch/launch/: gen_tetrapod.launch
