<?xml version="1.0"?>
<package format="2">

  <name>hexapod_control</name>
  <version>0.0.0</version>
  <description>The hexapod_control package</description>

  <maintainer email="miguel.prada.sarasola@gmail.com">Miguel Prada</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>

</package>
