<?xml version="1.0"?>
<package format="2">

  <name>hexapod_gazebo</name>
  <version>0.0.0</version>
  <description>The hexapod_gazebo package</description>

  <maintainer email="miguel.prada.sarasola@gmail.com">Miguel Prada</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>hexapod_description</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
  </export>

</package>
