<?xml version="1.0"?>
<package format="2">

  <name>hexapod_hw</name>
  <version>0.0.0</version>
  <description>The hexapod_hw package</description>

  <maintainer email="miguel.prada.sarasola@gmail.com">Miguel Prada</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>dynamixel_control_hw</exec_depend>

  <export>
  </export>

</package>
