<?xml version="1.0"?>
<package format="2">

  <name>hexapod_kinematics</name>
  <version>0.0.0</version>
  <description>The hexapod_kinematics package</description>

  <maintainer email="miguel.prada.sarasola@gmail.com">Miguel Prada</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>

  <depend>eigen</depend>

  <test_depend>rosunit</test_depend>

  <export>
  </export>

</package>
