<?xml version="1.0"?>
<package format="2">

  <name>hexapod_launch</name>
  <version>0.0.0</version>
  <description>The hexapod_launch package</description>

  <maintainer email="miguel.prada.sarasola@gmail.com">Miguel Prada</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>hexapod_controllers</exec_depend>
  <exec_depend>hexapod_description</exec_depend>
  <exec_depend>hexapod_gazebo</exec_depend>
  <exec_depend>hexapod_hw</exec_depend>

  <export>
  </export>

</package>
